--- a/index.html
+++ b/index.html
@@ -271,13 +271,7 @@
     <h2>8. التغييرات على سياسة الخصوصية</h2>
     <p>قد نقوم بتحديث سياسة الخصوصية هذه من وقت لآخر. سنقوم بإعلامك بأي تغييرات جوهرية من خلال نشر السياسة المحدثة في التطبيق. ننصحك بمراجعة هذه السياسة بشكل دوري للاطلاع على أي تغييرات.</p>
 
-    <h2>9. التواصل معنا</h2>
-    <div class="contact-info">
-      <p>إذا كان لديك أي أسئلة أو استفسارات حول سياسة الخصوصية هذه أو ممارساتنا المتعلقة بالبيانات، يرجى التواصل معنا من خلال:</p>
-      <p><strong>البريد الإلكتروني:</strong> privacy@tasmbeh.app</p>
-    </div>
-
-    <p>آخر تحديث: 1 يناير 2023</p>
+    <p>آخر تحديث: 21 اكتوبر 2025</p>
 
     <a href="index.html" class="back-btn">العودة إلى التطبيق</a>
   </div>
